Applying Cloudinary image params for hero image

--- a/app/views/curations/show.html.erb
+++ b/app/views/curations/show.html.erb
@@ -11,7 +11,7 @@
 
         <%# Hero %>
         <header class="box">
-          <%= image_tag 'dummy/curation-hero.jpg', alt: '', quality: 50, fetch_format: 'auto' %>
+          <%= image_tag 'dummy/curation-hero.jpg', alt: '', quality: 25, width: 1178, crop: 'limit', fetch_format: 'auto' %>
           <h1 class="island">Blue Is The New Black</h1>
           <p class="product-curation__desc island-sides island-btm toggle-content toggle-content--palm js-toggle-content"><%= raw "Pulvinar etiam ut, eros vel quis mus arcu, mus, ut mauris placerat, adipiscing etiam sed cursus? Vut amet! Magna nunc pid adipiscing tempor non? Nascetur in tristique ut? Vut lacus, integer, auctor mauris risus enim turpis est dictumst est. Ac turpis tristique. Diam turpis amet lectus scelerisque aliquam? Cum scelerisque turpis facilisis, amet rhoncus. Tempor montes in ac sed enim, lacus sit arcu habitasse! Ac platea! Magna et magna".truncate(400, '&#8230;') %></p>
         </header>
