Creating a new max width modifier for button main

--- a/app/views/curations/_more_from_retailers.html.erb
+++ b/app/views/curations/_more_from_retailers.html.erb
@@ -7,27 +7,27 @@
       </a>
     </li><!--
     --><li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">DC Shoes</span>
       </a>
     </li><!--
     --><li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">Florsheim</span>
       </a>
     </li><!--
     --><li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">Lush Fresh Handmade Cosmetics</span>
       </a>
     </li><!--
     --><li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">Billabong</span>
       </a>
     </li><!--
     --><li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">Shubar</span>
       </a>
     </li>
