--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -11,9 +11,9 @@
   .btn--main-white            - White
   .btn--main-compact          - Compact - decrease padding
   .btn--main-compact-sides    - Compact - decrease left/right padding
+  .btn--main-max-width        - Apply a maximum width, this is typically used when the `txt-truncate` helper is used on the button text
   .btn--main-lrg              - Large - increase top/bottom padding
   .btn--main-arrow            - Arrow on the right
-  .btn--main-toggle           - Shared modifier for checkbox and ios toggle modifiers
   .btn--main-toggle-checkbox  - Checkbox toggle
   .btn--main-toggle-ios       - iOS-style toggle
 
@@ -118,6 +118,9 @@
   /* Modifier: compact - decrease left/right padding */
   .btn--main-compact-sides {@include to-em(padding-left padding-right, $spacing-base);}
 
+  /* Modifier: apply a maximum width, this is typically used when the `txt-truncate` helper is used on the button text */
+  .btn--main-max-width {@include to-rem(max-width, 186);}
+
 	/* Modifier: large - increase top/btm padding */
 	.btn--main-lrg {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}
 
@@ -195,9 +198,6 @@
 
     &.btn--main-dark:hover:after,
     &.btn--main-dark:focus:after {border-left-color: lighten($color-grey-dark-3, 10%);}
-
-    /* Truncate text if too long - need to override the helper class `!important` keyword */
-    .txt-truncate {@include to-rem(max-width, 200, !important);}
   }
 
   /* Modifier: toggle */
