--- a/app/views/styleguide/buttons/_main.html.erb
+++ b/app/views/styleguide/buttons/_main.html.erb
@@ -3,6 +3,15 @@
 
   <a href="#" class="btn btn--main $modifier_class">Button (anchor)</a>
 
+  <% example '.btn--main-max-width' do %>
+    <button type="button" class="btn btn--main btn--main-max-width">
+      <span class="txt-truncate">Lush Fresh Handmade Cosmetics</span>
+    </button>
+    <a href="#" class="btn btn--main btn--main-max-width">
+      <span class="txt-truncate">Lush Fresh Handmade Cosmetics</span>
+    </a>
+  <% end %>
+
   <% example '.btn--main-arrow' do %>
     <button type="button" class="btn btn--main btn--main-dark btn--main-arrow">Button (button)</button>
     <a href="#" class="btn btn--main btn--main-dark btn--main-arrow">Button (anchor)</a>
