Adding social share triggers to pinboard tiles

--- a/app/views/curations/_more_from_retailers.html.erb
+++ b/app/views/curations/_more_from_retailers.html.erb
@@ -2,7 +2,7 @@
   <%# [NOTE] all the HTML for this `ul` needs to be outputted on same line %>
   <ul class="product-curation__retailers horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap">
     <li>
-      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides btn--main-max-width">
         <span class="txt-truncate">Colette by Colette Hayman</span>
       </a>
     </li><!--
