--- a/app/views/curations/_tile_hero.html.erb
+++ b/app/views/curations/_tile_hero.html.erb
@@ -3,6 +3,7 @@
   <a href="#" target="_self">
     <%# [NOTE] the `img` and the `div` need to be on same line %>
     <div class="tile__image"><img alt="" src="<%= tile_hero[:image_url] % 825 %>"></div>
+    <%# [NOTE] this is just replicated data from products tile %>
     <div class="tile__meta">
       <span class="tile__meta__icon">
         <span class="icon icon--products icon--lrg" aria-hidden="true"></span>
@@ -15,6 +16,23 @@
         </p>
       </div>
     </div>
+    <%# //[NOTE] this is just replicated data from products tile %>
   </a>
+  <%# [NOTE] social share controls will come from tile layout %>
+  <div class="tile__controls js-tile-controls">
+    <div class="social-share drop-down-container js-social-share" aria-live="polite" aria-atomic="true">
+      <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true" aria-expanded="false">
+        <span class="preloader">
+          <span class="preloader__spinner"></span>
+          <em>Loading&#8230;</em>
+        </span>
+        <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
+        --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
+        --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
+        --><span class="drop-down-container__active social-share__trigger__txt">Close</span>
+      </button>
+    </div>
+  </div>
+  <%# //[NOTE] social share controls will come from tile layout %>
 </article>
 <%# //Hero tile %>
