Adding temp styles for the removal of 'You may also like' section

--- a/app/assets/stylesheets/partials/modules/_product-curation.scss
+++ b/app/assets/stylesheets/partials/modules/_product-curation.scss
@@ -22,3 +22,11 @@
       @include font-size($font-size);
     }
   }
+
+  @include respond-min($non-palm) {
+    .product-curation__pager {
+      margin-bottom: 0;
+      padding-bottom: 0;
+      border-bottom: 0;
+    }
+  }
