--- a/app/views/curations/show.html.erb
+++ b/app/views/curations/show.html.erb
@@ -3,7 +3,7 @@
 <article class="product-curation" role="article">
 
   <%# 'Hero', 'More from retailers (non-palm)' and 'Pin board' %>
-  <div class="divider divider--lrg-non-palm">
+  <div class="divider divider--lrg-non-palmx">
     <div class="grid grid--gutter-half grid--mrg-half grid--non-linear">
 
       <%# 'Hero' and 'More from retailers (non-palm)' %>
@@ -77,7 +77,7 @@
   <%# //Hero and pin board %>
 
   <%# Pager %>
-  <section class="divider divider--lrg-non-palm" aria-labelledby="curation-pager">
+  <section class="product-curation__pager divider divider--lrg-non-palm" aria-labelledby="curation-pager">
     <h2 class="hide-visually" id="curation-pager">Pagination</h2>
     <nav class="pager pager--compact" role="navigation">
       <div class="pager__inner">
@@ -106,7 +106,7 @@
   <footer>
 
     <%# More from retailers (palm) %>
-    <section class="divider hide-fully--non-palm" aria-labelledby="curation-retailers-palm">
+    <section class="hide-fully--non-palm" aria-labelledby="curation-retailers-palm">
       <div class="txt-formatted mrg-base">
         <h2 id="curation-retailers-palm">More from retailers</h2>
       </div>
@@ -115,11 +115,11 @@
     <%# //More from retailers (palm) %>
 
     <%# You may also like %>
-    <section class="product-curation__also-like" aria-labelledby="curation-also-like">
+    <%#<section class="product-curation__also-like" aria-labelledby="curation-also-like">
       <div class="txt-formatted mrg-base">
         <h2 id="curation-also-like">You may also like&#8230;</h2>
       </div>
-    </section>
+    </section>%>
     <%# //You may also like %>
 
   </footer>
