attempt back end integration

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -6,17 +6,16 @@
     <p><em class="h1">No results</em></span></p>
   </div>
 <% else %>
-
-  <h1>Results for <em class="pill pill--txt-reset">"<%= @search.term =%>"</em></h1>
+ <%= @search.results =%>
+  <h1>Results for <em>"<%= @search.term =%>"</em></h1>
 
   <%# List of anchors to each search result type %>
   <div class="nav-contextual js-nav-contextual js-viewport-check">
     <div class="nav-contextual__clip">
       <div class="nav-contextual__clip__inner">
         <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
-          <li><a href="#">All Results</a></li>
-          <li><a href="#stores">Stores (999)</a></li>
-          <li><a href="#products">Products (999)</a></li>
+          <li><a href="#stores">Stores (<%= @search.results.stores.length =%>)</a></li>
+          <li><a href="#products">Products (<%= @search.results.products.length =%>)</a></li>
           <li><a href="#deals">Deals (999)</a></li>
           <li><a href="#events">Events (999)</a></li>
         </ul>
@@ -45,54 +44,37 @@
       <h3>All stores matching "<strong><%= @search.term =%></strong>"</h3>
     </div>
 
-    <div id="pin-board" class="pin-board grid grid--gutter-half grid--flush">
-      <% (1..5).each do |i| %>
-  <article class="tile tile--products box js-tile test-tile" role="article" >
+    <div id="pin-boarda" style="display:block" class="pin-board grid grid--gutter-half grid--flush">
+      <% @search.results.stores.each do |store| %>
 
+        <%# Tile store meta %>
+        <div class="tile__meta ">
 
-  <a class="test-tile-link" href="http://www.westfield.com.au/sydney/products/city-chic/spliced-deco-lace-dress/498605" target="_self"><div class="tile__image">
-  <img alt="" data-height="1167" src="http://res.cloudinary.com/wlabs/image/fetch/c_limit,f_auto,w_289/http://res.cloudinary.com/wlabs/image/upload/v1394248622/ptklr9fno4lm8eg3f2sc.jpg" />
-</div>
+          <%# Tile deal logo %>
+          <% if store.logo %>
+            <%= fetch_image_tag store.logo,
+              alt: "#{store.display} logo",
+              width: 168,
+              height: 62,
+              class: "tile__meta__logo",
+              crop: :pad,
+              format: :auto
+            %>
+          <% end %>
+          <%# //Tile deal logo %>
 
-<div class="tile__meta">
+          <%# Tile store name %>
+          <h3 class="tile__meta__hdr txt-truncate"><%= store.display %></h3>
+          <%# //Tile store name %>
 
-  <span class="tile__meta__icon">
-    <span class="icon icon--products icon--lrg" aria-hidden="true"></span>
-  </span>
+        </div>
+        <%# //Tile deal meta %>
 
-  <div class="tile__meta__inner">
-    <h3 class="tile__meta__hdr txt-truncate">Spliced Deco Lace Dress</h3>
-    <p class="tile__meta__desc txt-truncate">
-      <span class="tile__meta__desc__price">$129.95</span>
-      from <strong>City Chic</strong>
-    </p>
-  </div>
-
-</div>
-</a>
-
-  <div class="tile__controls js-tile-controls">
-    <div class="social-share drop-down-container js-social-share" data-url="http://www.westfield.com.au/sydney/products/498605/social-share" aria-live="polite" aria-atomic="true">
-
-  <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true" aria-expanded="false">
-
-    <span class="preloader">
-      <span class="preloader__spinner"></span>
-      <em>Loading&#8230;</em>
-    </span>
-
-    <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
-    --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
-    --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
-    --><span class="drop-down-container__active social-share__trigger__txt">Close</span>
-
-  </button>
-
-</div>
-
-  </div>
-
-</article>
+        <%# Tile deal icon %>
+        <span class="tile__meta__icon">
+          <span class="icon icon--stores icon--lrg" aria-hidden="true"></span>
+        </span>
+        <%# //Tile deal icon %>
       <% end %>
 
     </div>
@@ -103,6 +85,8 @@
       <span class="icon icon--products icon--spacing"></span>
       Products
     </h2>
+
+
   </section>
 
   <section class="txt-formatted divider divider--lrg">
