params['tickle'] for dark curations

--- a/app/views/curations/show.html.erb
+++ b/app/views/curations/show.html.erb
@@ -1,5 +1,6 @@
 <% content_for :class_for_main, "container--spacing-top-main-content" %>
 
+<% if Rails.env.development? or ('true' == params['tickle']) %>
 <article class="product-curation" role="article">
 
   <%# 'Hero', 'More from retailers (non-palm)' and 'Pin board' %>
@@ -126,6 +127,7 @@
   <%# //'More from retailers' and 'You may also like' %>
 
 </article>
+<% end %>
 
 <%- content_for :custom_javascript do -%>
   <%# Run 'Toggle content' plugin %>
