add drop down attribute to tog vis instances where clicking outside widget should not close it

--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -95,7 +95,7 @@
       <% end %>
     </div>
   </section>
-  <button type="button" class="btn btn--full btn--expand-collapse js-disabled-hide" toggle-visibility="fine-print-toggle">
+  <button type="button" class="btn btn--full btn--expand-collapse js-disabled-hide" toggle-visibility="fine-print-toggle" toggle-visibility-drop-down="false">
     <span class="show-when-visible show-when-visible--block">
       Collapse the fine print
       <span aria-hidden="true" class="icon icon--arrow-up-full icon--lrg"></span>
