--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -153,7 +153,7 @@
             <%# //Gift card filter %>
 
             <%# Keyword Filter toggle %>
-            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-disabled-hide js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter">
+            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-disabled-hide js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter" toggle-visibility-drop-down="false">
               <span class="hide-visually">Show filter stores by keyword</span>
               <span class="icon icon--keyword-filter icon--lrg" aria-hidden="true"></span>
             </button>
