--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -99,7 +99,7 @@
                   <dt class="hide-visually">Opening hours</dt>
                   <dd>Open<span class="hide-fully--palm-inline"> from</span> <time datetime="<%= @store.opening_time %>"><%= twelve_hour_format @store.opening_time %></time>&#8211;<time datetime="<%= @store.closing_time %>"><%= twelve_hour_format @store.closing_time %></time><span class="hide-fully--palm-inline"> today</span>
                   <% if @this_week_hours.present? %>
-                    <button class="btn btn--faux-link js-store-hours-toggle-trigger js-disabled-hide" toggle-visibility="store-hours">
+                    <button class="btn btn--faux-link js-store-hours-toggle-trigger js-disabled-hide" toggle-visibility="store-hours" toggle-visibility-drop-down="false">
                       <span class="hide-fully--palm">
                         (Show
                         <span class="show-when-visible">less)</span>
@@ -282,14 +282,25 @@
             });
 
           }
-
-          $('.js-store-hours-toggle-trigger').click(function() {
-            if ($('.js-store-hours-toggle-target').hasClass('is-active')) {
-              $('.js-store-hours-toggle-container').addClass('is-store-hours-visible');
-            } else {
-              $('.js-store-hours-toggle-container').removeClass('is-store-hours-visible');
+          (function() {
+            function toggleStoreDetailHeight() {
+              if ($('.js-store-hours-toggle-target').hasClass('is-active')) {
+                $('.js-store-hours-toggle-container').addClass('is-store-hours-visible');
+              } else {
+                $('.js-store-hours-toggle-container').removeClass('is-store-hours-visible');
+              }
             }
-          })
+
+            $('.js-store-hours-toggle-trigger').click(toggleStoreDetailHeight);
+
+            // Escape key will trigger check for store detail container height
+            $(document).bind( 'keydown', function ( event ) {
+              if ( event.keyCode == 27 ) {
+                toggleStoreDetailHeight();
+              }
+            });
+
+          })();
         }
       </script>
 
