--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -16,7 +16,7 @@
 
     <% if @centre && @nearby_centres %>
       <%# Show products/deals/events centre selector toggle button %>
-      <button type="button" class="btn btn--main btn--main-white btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
+      <button type="button" class="btn btn--main btn--main-white btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle" toggle-visibility-drop-down="false">
         <span class="hide-visually">Show <%= params[:controller] %> shopping centre select menu</span>
         <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
       </button>
