--- a/app/assets/stylesheets/partials/modules/_product-curation.scss
+++ b/app/assets/stylesheets/partials/modules/_product-curation.scss
@@ -23,6 +23,7 @@
     }
   }
 
+  /* Temp styles until 'You may also like...' section is added */
   @include respond-min($non-palm) {
     .product-curation__pager {
       margin-bottom: 0;
