search dynamic WIP

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -22,7 +22,7 @@
   <%# //No deals fallback message %>
 
 <%- else -%>
-
+<%= @deals %>
   <%# Pin board %>
   <%= pin_board(@deals) do |deal| %>
     <%= tile "deal", result: deal %>
