--- a/app/views/shared/tiles/_store.html.erb
+++ b/app/views/shared/tiles/_store.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <%# Tile deal store name %>
-  <h3 class="tile__meta__hdr txt-truncate"><%= result.display %></h3>
+  <h3 class="tile__meta__hdr txt-truncate"><%= result[:display] %></h3>
   <%# //Tile deal store name %>
 
 </div>
