--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,8 +1,8 @@
-<article class="tile tile--<%= result.kind.pluralize %> box js-tile test-tile" role="article" <%= content_for :tile_attrs %>>
+<article class="tile tile--<%= result[:result_type].pluralize %> box js-tile test-tile" role="article" <%= content_for :tile_attrs %>>
 
   <%# Tile indentifier for centre home page only %>
   <% if tile_heading? %>
-    <h2 class="hide-visually"><%= result.kind.titlecase %></h2>
+    <h2 class="hide-visually"><%= result[:result_type].titlecase %></h2>
   <% end %>
   <%# //Tile indentifier for centre home page only %>
 
@@ -10,7 +10,7 @@
 
   <%# Tile controls %>
   <div class="tile__controls js-tile-controls">
-    <%= render "/shared/social_share/social_share", kind: result.kind, id: result.id %>
+    <%= render "/shared/social_share/social_share", kind: result[:result_type], id: result.id %>
   </div>
   <%# //Tile controls %>
 
